--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <name>MultiChat-Mediator</name>
-
+                  <packaging>jar</packaging>
+  <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
