--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,6 @@
     <build>
         <pluginManagement>
             <plugins>
-
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.0</version>
@@ -100,6 +99,21 @@
                     </execution>
                 </executions>
             </plugin>
+                 <plugin>
+                 <!-- Build an executable JAR -->
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-jar-plugin</artifactId>
+                 <version>3.1.0</version>
+                 <configuration>
+                   <archive>
+                     <manifest>
+                       <addClasspath>true</addClasspath>
+                       <classpathPrefix>lib/</classpathPrefix>
+                       <mainClass>com.mypackage.MyClass</mainClass>
+                     </manifest>
+                   </archive>
+                 </configuration>
+                </plugin>
         </plugins>
     </build>
 
