--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <name>MultiChat-Mediator</name>
-                  <packaging>jar</packaging>
-  <url>http://maven.apache.org</url>
+    <packaging>jar</packaging>
+    <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -99,21 +99,20 @@
                     </execution>
                 </executions>
             </plugin>
-                 <plugin>
-                 <!-- Build an executable JAR -->
-                 <groupId>org.apache.maven.plugins</groupId>
-                 <artifactId>maven-jar-plugin</artifactId>
-                 <version>3.1.0</version>
-                 <configuration>
-                   <archive>
-                     <manifest>
-                       <addClasspath>true</addClasspath>
-                       <classpathPrefix>lib/</classpathPrefix>
-                       <mainClass>com.mypackage.MyClass</mainClass>
-                     </manifest>
-                   </archive>
-                 </configuration>
-                </plugin>
+            <plugin>
+                <!-- Build an executable JAR -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
