--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,14 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.0</version>
                 </plugin>
-
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.10.1</version>
+                    <version>3.8.1</version> <!-- Usa la última versión estable -->
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-resources-plugin</artifactId>
@@ -112,7 +116,6 @@
                     </archive>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
