--- a/pom.xml
+++ b/pom.xml
@@ -16,20 +16,26 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <sonar.organization>francescomarelli</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <junit.jupiter.version>5.6.0</junit.jupiter.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.6.0</version>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.6.0</version>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.7</version>
         </dependency>
         <!-- Agregué una dependencia para el plugin de Surefire -->
         <dependency>
@@ -80,7 +86,6 @@
                     </execution>
                 </executions>
             </plugin>
-
             <!-- Configuración del plugin de compilación -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
